kubernetes/gabernetes/apps/ingress-nginx/app/envoy-fallback.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-fallback
  namespace: ingress-nginx
spec:
  parentRefs:
    - namespace: envoy-gateway-system
      name: envoy-public
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: ingress-nginx-controller
          namespace: ingress-nginx
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
